--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.header-h1 {
+    background-color: black;
+    color: white;
+    line-height: 100px;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.allJobs {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
 }
+.div-job {
+    border: solid red 2px;
+    padding: 15px;
+    display: flex;
+    width: calc(100% / 3 - 40px);
+    height: 153px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    flex-direction: column;
+    justify-content: space-between;
+    flex-shrink: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.div-job:not(:last-child) {
+    margin-right: 20px;
 }
-
-.App-link {
-  color: #61dafb;
+.h2-job {
+    font-size: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.job1 {
+    border: solid 3px blue;
+}
+.test {
+    display: flex;
+    margin-bottom: 19px;
 }
